# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-03-27  Christian Heller  <christian.heller@tuxtax.de>

        * Completely redesign comparison modules in directory "executor/comparator/"

2011-03-26  Christian Heller  <christian.heller@tuxtax.de>

        * Add many kinds of comparator files to directory "executor/comparator/"
        * Add files "calculate_cybol_abstraction.c", "compare_cybol_abstraction.c", "route_cybol_abstraction.c"
            to directory "constant/abstraction/cybol/"
        * Add files "primitive_operation_abstraction.c", "operation_abstraction.c"
            to directory "constant/abstraction/operation/"
        * Delete "constant/abstraction/mime/" directory, as the constants specified by it
            were redundant and are already contained in directory "constant/abstraction/cybol/"

2011-03-23  Christian Heller  <christian.heller@tuxtax.de>

        * Make example application "counter" and "counter_static_model" work fully
        * Add new example applications "addition", "addition_dynamic_model", "addition_dynamic_model_with_root", "addition_static_model"

2011-03-22  Christian Heller  <christian.heller@tuxtax.de>

        * Add new example application "counter"

2011-02-27  Christian Heller  <christian.heller@tuxtax.de>

        * Release CYBOP 0.10.0

2011-02-26  Christian Heller  <christian.heller@tuxtax.de>

        * Clean up some minor issues in preparation of release CYBOP 0.10.0

2011-02-25  Christian Heller  <christian.heller@tuxtax.de>

        * Experiment with a few new container functions

2011-02-24  Christian Heller  <christian.heller@tuxtax.de>
